[package]
name = "terrasave_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "tracing", "multipart", "headers"] }
futures = "0.3.29"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }

[dev-dependencies]
anyhow = "1.0.75"
